--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,14 @@ body {
 	width: 300px;
 	height: 200px;
 }
+
+.overlay {
+	opacity: 0;
+}
+
+.card:hover .overlay {
+	opacity: 1;
+	background: rgba(43, 41, 41, 0.9);
+	width: 100%;
+	height: 100%;
+}
